deeplink to settings when no provider is set up

--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -8,6 +8,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="using:Microsoft.Terminal.Query.Extension"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mtu="using:Microsoft.Terminal.UI"
              xmlns:mux="using:Microsoft.UI.Xaml.Controls"
              VerticalAlignment="Stretch"
              AllowFocusOnInteraction="True"
@@ -163,10 +164,10 @@
             </Style>
             <DataTemplate x:Key="QueryGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,0,0,-6"
+                <StackPanel Margin="0,0,0,-6"
                             HorizontalAlignment="Right"
                             VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
                             Spacing="4">
                     <TextBlock FontFamily="Segoe UI"
                                FontSize="12">
@@ -181,12 +182,12 @@
             </DataTemplate>
             <DataTemplate x:Key="ResponseGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,0,0,-6"
+                <StackPanel Margin="0,0,0,-6"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
                             Spacing="4">
-                    <mux:ImageIcon Source="{x:Bind BadgeBitmapImage}"/>
+                    <mux:ImageIcon Source="{x:Bind BadgeBitmapImage}" />
                     <TextBlock FontFamily="Segoe UI"
                                FontSize="12">
                         <Run Text="{x:Bind Attribution}" />
@@ -409,7 +410,26 @@
                      IsSpellCheckEnabled="False"
                      PlaceholderText="{x:Bind QueryBoxPlaceholderText}"
                      Text=""
-                     TextWrapping="Wrap" />
+                     TextWrapping="Wrap"
+                     Visibility="{x:Bind ProviderExists, Mode=OneWay}" />
+            <Grid Grid.Row="1"
+                  HorizontalAlignment="Center"
+                  RowSpacing="8"
+                  Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(ProviderExists), Mode=OneWay}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock x:Uid="SetUpProviderDisclaimer"
+                           Grid.Row="0"
+                           HorizontalAlignment="Center" />
+                <Button x:Name="SetUpProviderButton"
+                        Grid.Row="1"
+                        HorizontalAlignment="Center"
+                        Click="_setUpAIProviderInSettings">
+                    <TextBlock x:Uid="SetUpProviderButton" />
+                </Button>
+            </Grid>
             <TextBlock Grid.Row="2"
                        Margin="20,0,0,16"
                        FontSize="10">
