--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -40,9 +40,10 @@
                            Style="{StaticResource TextBlockSubHeaderStyle}" />
                 <!--  GitHub Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.GithubCopilotAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}">
+                                        StartExpanded="True"
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -56,16 +57,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.GithubCopilotActive, Mode=OneWay}"
                                           Checked="SetGithubCopilotActive_Check"
+                                          IsChecked="{x:Bind ViewModel.GithubCopilotActive, Mode=OneWay}"
                                           Unchecked="SetGithubCopilotActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearGithubCopilotTokens_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearGithubCopilotTokens" />
                             </Button>
                         </Grid>
@@ -94,27 +95,29 @@
                                                              Glyph="&#xE625;" />
                                     </muxc:InfoBadge.IconSource>
                                 </muxc:InfoBadge>
-                                <RichTextBlock TextWrapping="WrapWholeWords"
-                                               MaxWidth="900">
+                                <RichTextBlock MaxWidth="900"
+                                               TextWrapping="WrapWholeWords">
                                     <Paragraph>
                                         <Run x:Uid="AISettings_GithubCopilotPrerequisite" />
                                         <LineBreak />
                                         <LineBreak />
                                         <Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart1" /><Hyperlink NavigateUri="https://go.microsoft.com/fwlink/?linkid=2285598"
-                                                   TextDecorations="None"><Run x:Name="AISettings_GithubCopilotSignUpLinkText" />
+                                                   TextDecorations="None">
+                                            <Run x:Name="AISettings_GithubCopilotSignUpLinkText" />
                                         </Hyperlink><Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart2" /><Hyperlink NavigateUri="https://go.microsoft.com/fwlink/?linkid=2285390"
-                                                   TextDecorations="None"><Run x:Name="AISettings_GithubCopilotLearnMoreLinkText" />
+                                                   TextDecorations="None">
+                                            <Run x:Name="AISettings_GithubCopilotLearnMoreLinkText" />
                                         </Hyperlink><Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart3" />
                                     </Paragraph>
                                 </RichTextBlock>
                             </StackPanel>
                             <StackPanel Grid.Row="1"
-                                        Orientation="Horizontal"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center"
+                                        Orientation="Horizontal"
                                         Spacing="8">
-                                <TextBlock Text="{x:Bind ViewModel.GithubCopilotAuthMessage, Mode=OneWay}"
-                                           VerticalAlignment="Center"/>
+                                <TextBlock VerticalAlignment="Center"
+                                           Text="{x:Bind ViewModel.GithubCopilotAuthMessage, Mode=OneWay}" />
                                 <Button Click="{x:Bind ViewModel.InitiateGithubAuth_Click}"
                                         Style="{StaticResource AccentButtonStyle}">
                                     <TextBlock x:Uid="AISettings_InitiateGithubAuthFlow" />
@@ -125,9 +128,9 @@
                 </local:SettingContainer>
                 <!--  Azure OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_AzureOpenAIKeyAndEndpoint"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.AzureOpenAIAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreAzureOpenAIKeyAndEndpointSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -141,16 +144,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.AzureOpenAIActive, Mode=OneWay}"
                                           Checked="SetAzureOpenAIActive_Check"
+                                          IsChecked="{x:Bind ViewModel.AzureOpenAIActive, Mode=OneWay}"
                                           Unchecked="SetAzureOpenAIActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearAzureOpenAIKeyAndEndpoint_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearAzureOpenAIKeyAndEndpoint" />
                             </Button>
                         </Grid>
@@ -245,9 +248,9 @@
                 </local:SettingContainer>
                 <!--  OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_OpenAIKey"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.OpenAIAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.IsOpenAIKeySet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -261,16 +264,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.OpenAIActive, Mode=OneWay}"
                                           Checked="SetOpenAIActive_Check"
+                                          IsChecked="{x:Bind ViewModel.OpenAIActive, Mode=OneWay}"
                                           Unchecked="SetOpenAIActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearOpenAIKey_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearOpenAIKey" />
                             </Button>
                         </Grid>
