--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -40,9 +40,9 @@
                            Style="{StaticResource TextBlockSubHeaderStyle}" />
                 <!--  GitHub Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.GithubCopilotAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -138,9 +138,9 @@
                 </local:SettingContainer>
                 <!--  Azure OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_AzureOpenAIKeyAndEndpoint"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.AzureOpenAIAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreAzureOpenAIKeyAndEndpointSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -264,9 +264,9 @@
                 </local:SettingContainer>
                 <!--  OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_OpenAIKey"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}"
                                         IsEnabled="{x:Bind ViewModel.OpenAIAllowed}"
-                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.IsOpenAIKeySet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
