--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -40,8 +40,9 @@
                            Style="{StaticResource TextBlockSubHeaderStyle}" />
                 <!--  GitHub Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}"
-                                        Visibility="{x:Bind ViewModel.GithubCopilotFeatureEnabled}">
+                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}"
+                                        IsEnabled="{x:Bind ViewModel.GithubCopilotAllowed}"
+                                        Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -137,6 +138,8 @@
                 </local:SettingContainer>
                 <!--  Azure OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_AzureOpenAIKeyAndEndpoint"
+                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}"
+                                        IsEnabled="{x:Bind ViewModel.AzureOpenAIAllowed}"
                                         Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreAzureOpenAIKeyAndEndpointSet, Mode=OneWay}">
@@ -261,6 +264,8 @@
                 </local:SettingContainer>
                 <!--  OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_OpenAIKey"
+                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}"
+                                        IsEnabled="{x:Bind ViewModel.OpenAIAllowed}"
                                         Style="{StaticResource ExpanderSettingContainerStyle}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.IsOpenAIKeySet, Mode=OneWay}">
