Remove broken text boxes from content dialog

--- a/src/cascadia/TerminalSettingsEditor/NullableColorPicker.xaml
+++ b/src/cascadia/TerminalSettingsEditor/NullableColorPicker.xaml
@@ -112,9 +112,9 @@
                               IsAlphaEnabled="False"
                               IsAlphaSliderVisible="True"
                               IsAlphaTextInputVisible="True"
-                              IsColorChannelTextInputVisible="True"
+                              IsColorChannelTextInputVisible="False"
                               IsColorSliderVisible="False"
-                              IsHexInputVisible="True"
+                              IsHexInputVisible="False"
                               IsMoreButtonVisible="False"
                               Orientation="Horizontal" />
         </ContentDialog>
