--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -133,6 +133,35 @@
                                                            CodeResponseMessageTemplate="{StaticResource CodeResponseMessageTemplate}"
                                                            QueryMessageTemplate="{StaticResource QueryMessageTemplate}"
                                                            TextResponseMessageTemplate="{StaticResource TextResponseMessageTemplate}" />
+            <DataTemplate x:Key="RichQueryMessageTemplate"
+                          x:DataType="local:ChatMessage">
+                <Grid Height="Auto"
+                      Margin="4"
+                      HorizontalAlignment="Right">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ContentPresenter Grid.Row="1"
+                                      Content="{x:Bind RichBlock}" />
+                </Grid>
+            </DataTemplate>
+            <DataTemplate x:Key="RichResponseMessageTemplate"
+                          x:DataType="local:ChatMessage">
+                <Grid Height="Auto"
+                      Margin="4"
+                      HorizontalAlignment="Left">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <ContentPresenter Grid.Row="1"
+                                      Content="{x:Bind RichBlock}" />
+                </Grid>
+            </DataTemplate>
+            <local:ExtensionPaletteMessageTemplateSelector2 x:Key="ChatMessageTemplateSelector2"
+                                                            RichResponseMessageTemplate="{StaticResource RichResponseMessageTemplate}"
+                                                            RichQueryMessageTemplate="{StaticResource RichQueryMessageTemplate}" />
             <Style TargetType="ListViewHeaderItem">
                 <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
                 <Setter Property="FontSize" Value="{ThemeResource ListViewHeaderItemThemeFontSize}" />
@@ -204,6 +233,9 @@
                                                                          ResponseGroupedMessageTemplate="{StaticResource ResponseGroupedMessageTemplate}" />
             <CollectionViewSource x:Key="MessagesCollectionViewSource"
                                   x:Name="MessagesCollectionViewSource"
+                                  IsSourceGrouped="True" />
+            <CollectionViewSource x:Key="MessagesCollectionViewSource2"
+                                  x:Name="MessagesCollectionViewSource2"
                                   IsSourceGrouped="True" />
         </ResourceDictionary>
     </UserControl.Resources>
@@ -287,7 +319,8 @@
                               ItemClick="_listItemClicked"
                               ItemTemplateSelector="{StaticResource ChatMessageTemplateSelector}"
                               ItemsSource="{Binding Source={StaticResource MessagesCollectionViewSource}}"
-                              SelectionMode="None">
+                              SelectionMode="None"
+                              Visibility="Collapsed">
                         <ListView.Resources>
                             <SolidColorBrush x:Key="ListViewItemBackgroundPointerOver"
                                              Color="Transparent" />
@@ -334,6 +367,96 @@
                                                HorizontalTextAlignment="Center"
                                                TextWrapping="WrapWholeWords">
                                         <Run x:Name="TitleSubheader" />
+                                    </TextBlock>
+                                </Border>
+                                <StackPanel Grid.Row="3"
+                                            Grid.Column="2"
+                                            Margin="0,12,0,12"
+                                            HorizontalAlignment="Center"
+                                            Orientation="Horizontal">
+                                    <TextBlock Margin="0,0,8,0"
+                                               FontSize="12">
+                                        <Hyperlink NavigateUri="https://go.microsoft.com/fwlink/?linkid=2251839"
+                                                   TextDecorations="None">
+                                            <Run x:Uid="LearnMoreLink" />
+                                        </Hyperlink>
+                                    </TextBlock>
+                                </StackPanel>
+                            </Grid>
+                        </ListView.Header>
+                        <ListView.GroupStyle>
+                            <GroupStyle HeaderTemplateSelector="{StaticResource GroupedChatMessageTemplateSelector}" />
+                        </ListView.GroupStyle>
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <ItemsStackPanel VerticalAlignment="Bottom"
+                                                 ItemsUpdatingScrollMode="KeepLastItemInView" />
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                    <ListView x:Name="_suggestionsListView2"
+                              Grid.Row="0"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="3"
+                              HorizontalAlignment="Stretch"
+                              VerticalAlignment="Bottom"
+                              HorizontalContentAlignment="Stretch"
+                              IsItemClickEnabled="True"
+                              ItemClick="_listItemClicked"
+                              ItemTemplateSelector="{StaticResource ChatMessageTemplateSelector}"
+                              ItemsSource="{Binding Source={StaticResource MessagesCollectionViewSource2}}"
+                              SelectionMode="None">
+                        <ListView.Resources>
+                            <SolidColorBrush x:Key="ListViewItemBackgroundPointerOver"
+                                             Color="Transparent" />
+                            <SolidColorBrush x:Key="ListViewItemBackgroundPressed"
+                                             Color="Transparent" />
+                        </ListView.Resources>
+                        <ListView.Header>
+                            <Grid RowSpacing="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="6*" />
+                                    <ColumnDefinition Width="1*" />
+                                    <ColumnDefinition Width="1*" />
+                                </Grid.ColumnDefinitions>
+                                <mux:ImageIcon Name="HeaderIcon2"
+                                               Grid.Row="0"
+                                               Grid.Column="1"
+                                               Grid.ColumnSpan="3"
+                                               Width="64"
+                                               Height="64"
+                                               Margin="0,0,0,20" />
+                                <TextBlock x:Name="QueryIntro2"
+                                           Grid.Row="1"
+                                           Grid.Column="1"
+                                           Grid.ColumnSpan="3"
+                                           Margin="0,0,0,20"
+                                           HorizontalAlignment="Center"
+                                           FontSize="20" />
+                                <Border Grid.Row="2"
+                                        Grid.Column="2"
+                                        BorderBrush="{ThemeResource DividerStrokeColorDefaultBrush}"
+                                        BorderThickness="0,0,0,1">
+                                    <TextBlock Margin="16,0,16,12"
+                                               HorizontalAlignment="Center"
+                                               FontSize="14"
+                                               Foreground="{ThemeResource ApplicationSecondaryForegroundThemeBrush}"
+                                               HorizontalTextAlignment="Center"
+                                               TextWrapping="WrapWholeWords">
+                                        <Run x:Name="TitleSubheader2" />
                                     </TextBlock>
                                 </Border>
                                 <StackPanel Grid.Row="3"
